test/types/cptr/c_ptrTo_domain.1.good
c_ptrTo_domain.chpl:8: error: c_ptrTo domain type not supported
